--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 
+language: generic
+
 services:
   - docker
 
@@ -7,5 +9,6 @@ before_install:
   - docker build -t alpine-node-onbuild .
   - docker build -t alpine-node-onbuild-test tests/
   - docker run -d --name alpine-node-onbuild-test alpine-node-onbuild-test
+
 script:
   - docker run --link alpine-node-onbuild-test:test -it --rm iadknet/alpine-curl http://test:3000/ | grep 'Hello World!'
